src/css/style.css
#logo {
    font-size: 26px;
    text-transform: uppercase;
    letter-spacing: 1px;
    text-decoration: none;
    color: darkslategray;
    position: relative;
    padding-left: 15px;
}

#logo::before {
    content: "";
    position: absolute;
    width: 10px;
    height: 35px;
    background-color: orange;
    background-position: center;
    background-size: contain;
    margin-top: 5px;
    left: 0px;
}

#contacts {
    background-color: orange;
    padding: 5px;
}

#index-content {
    text-align: center;
    font-weight: bold;
    position: relative;
    width: 100%;
    height: 100vw;
}

#index-content::before {
    content: "";
    background-image: url("../../img/gym.jpg");
    background-size: contain;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 0.2;
}

.mail {
    position: relative;
    padding-left: 18px;
}

.mail::before {
    content: "";
    position: absolute;
    margin-top: 5px;
    left: 0px;
    width: 16px;
    height: 16px;
    background-image: url("../../img/mail.png");
    background-position: center;
    background-size: contain;
}

.phone {
    position: relative;
    margin-left: 15px;
    padding-left: 18px;
}

.phone::before {
    content: '';
    position: absolute;
    margin-top: 5px;
    left: 0px;
    width: 16px;
    height: 16px;
    background-image: url("../../img/phone.png");
    background-position: center;
    background-size: contain;
}

.dropdown:hover .dropdown-menu {
    display: block;
    margin-top: 0;
 }

.input-form {
    margin: 50px;
}

